--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
 .page-header{
-  color: orchid;
+  color: rgb(95, 186, 219);
+}
+
+.promo {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+p {
+  font-family: "Arial", "Helvetica", sans-serif;
+ }
+
+ body {
+  background-color: rgba(255, 166, 0, 0.131);
 }
