Продолжает исправлять разметку и графику.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
-body {
-  background-color: rgba(137, 182, 162, 0.945);
+html {
+  background-color: rgba(186, 199, 193, 0.945);
 }
 
 page-header{}
