--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
-/* -Шрифты- */
+/*  Шрифты  */
 
-/* PT Sans */
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
@@ -17,26 +16,69 @@
   font-display: swap;
 }
 
-
-/* -Стилизация- */.
-
-/* Основные стили */
-
-html	{
-  height: 100%;
-}
+/* Теги */
 
 body {
-  width: 1200px;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
+  background-color: rgba(94, 6, 6, 0.253);
   font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 21px;
+  color: #000;  
+  margin: 0
+}
+
+background-color: #000000;
+background-image: url("../images/background-body.jpg");
+background-repeat: no-repeat;
+background-position: center top;
+
+
+
+
+h1 {
+  color: #000;
+  text-align: center;
+  font-family: PT Sans, sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px; /* 120% */
+  text-transform: uppercase;
+  position: absolute;
+}
+
+h2 {
+  color: #333;
+  text-align: center;
+  font-family: PT Sans, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 28px;
+}
+
+h4 {
   font-size: 16px;
+  font-weight: 700;
   line-height: 24px;
-  color: #242424;
-  background-color:  #57202057;
+}
+
+p {
+  color: #333;
+  text-align: center;
+  font-family: PT Sans, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
 }
 
 .visually-hidden {
@@ -52,119 +94,100 @@ body {
   overflow: hidden;
 }
 
-/* Стили меню */
+/* Кнопки */
 
-.page-header {.
-  width: 1200px;
-  height: 64px;
-}
-
-.navigation {
-  width: 1200px;
-  margin: 0 auto;
-}
-
-.navigation-logo {
-
-}
-
-.page-header-logo {
-
-}
-
-.navigation-list {
-  display:flex;
-  flex-direction: row;
-  margin: 5px;
-  margin-top:auto;
-  padding: 5px;
-  width: 339px;
-  list-style: none;
-}
-
-.navigation-item {
-
-}
-
-.navigation-link {
-
-}
-
-.navigation-link-current {
-
-}
-
-.navigation-user {
-
+.btn {
+  display: inline-block;
+  border: none;
+  height: 50px;
+  background-color: #eeeeee;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  padding: 8px 50px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: none;
+  border-radius: 4px;
+  display: inline-block; */
 }
 
 .navigation-button {
-
+  background: #756157;
 }
 
+.interest-button {
+  background: #82B3D3;
+}
 
-/* Стили основного содержимого */
+.mailing-form-button {
+  background-color: transparent;
+}
 
-.main-index{}
+/* Иконки для навигации */
 
-.hero{}
+icon-search::before{
+  content: url("../images/icons/search.svg");
+  width: 19px;
+  height: 19px;
+}
 
-/* Логотип на фоновом изображении с декоративным элементом */
+icon-heart::before{
+  content: url("../images/icons/heart.svg");
+  width: 18px;
+  height: 17px;
+}
+
+/* Декоративный логотип в шапке главной странице */
+
 .hero-logo {
-    background-image: url(../images/content-fon/mountans.jpg), url(../images/zig-zag.png);
-    background-color: #82B3D3;
-    background-size: cover, contain;
-    background-repeat: no-repeat;
-    background-position: center bottom;
+  height: 485px;
+  background-image: url(../images/zig-zag.png), url(../images/content-fon/mountans.jpg);
+  background-repeat: no-repeat;
+  background-size: contain, cover;
+  background-color: #82B3D3;
+  color: black;
+  background-position: center bottom;
 }
 
-.hero-welcome {
+/*  Иконки */
+
+.icon-vk::before {
+  content: url("../images/icons/vk-focus.svg");
+  width: 24px;
+  height: 14px;
+  object-fit: contain;
 }
 
+.icon-telegram::before {
+  content: url(../images/icons/telegram-focus.svg);
+  width: 18px;
+  height: 16px;
+  object-fit: contain;
+}
 
-.advantages
+.icon-youtube::before {
+  content: url(../images/icons/youtube-focus.svg);
+  width: 22px;
+  height: 17px;
+  object-fit: contain;
+}
 
-.advantages-subtitle
+.icon-html::before {
+  content: url("../images/brand=htmlacademy.svg");
+  width: 22px;
+  height: 17px;
+  object-fit: contain;
+}
 
-.advantages-text
-
-.advantages-reasons
-
-.advantages-subtheme
-
-
-
-.services
-
-.services-subtitle
-
-.services-text
-
-.services-reasons
-
-.services-subtheme
-
-.services-list
-
-.services-item
-
-.services-description
-
-
-.interest
-
-.interest-subtitle
-
-.interest-text
-
-.interest-button
-
+.advantages, .services{
+  text-align: center;
+}
 
 .mailing {
-
+  color: #fff;
 }
 
-/* Секция "Рассылка" на фоновом изображении */
 .mailing-item {
   background-image: url(../images/content-fon/subscribe.jpg);
   background-color: #82B3D3;
@@ -172,14 +195,9 @@ body {
   background-repeat: no-repeat;
   background-position: center bottom;
   color: white;
+  margin: 0 auto;
+  max-width: 100%;
 }
-..
-.mailing-form
-
-.mailing-form-button
-
-
-/* Стили подвала */
 
 .footer-page {
   display: flex;
@@ -190,81 +208,27 @@ body {
   align-items: center;
 }
 
-.footer-navigation{
-
-}
-
-.footer-contacts
-
-.footer-social-list
-
-.footer-social-item {
-  display: flex;
-  width:142px;.
-  margin-right: auto;
-  margin-top:auto;
-  list-style: none;
-}
-
-.footer-social-link {
-  display: flex;
-  padding: 0px 10px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  flex: 1 0 0;
-  align-self: stretch;
-}
-
-.icon-vk{
-  background-image: url{../images/icons/vk-focus.svg};
+search-subtitle{
+  color: #FFF;
+  font-family: PT Sans, sans-serif;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 78px;
+  width: 494.399px;
+  }
   
-}
-
-.icon-telegram {
-  background-image: url(../images/icons/telegram-focus.svg);
-  width: 18px;
-  height: 16px;
-}
-
-.icon-youtube {
-  background-image: url(../images/icons/youtube-focus.svg);
-  width: 22px;
-  height: 17px;
-}
-
-
-.footer-phone {
-
-}
-
-.footer-phone-item {
-  display: flex;
-  width:331px;
-  margin-right: auto;
-  margin-top:auto;
-}
-
-.footer-phone-link {
-
-}
-
-
-.footer-brand {
-
-}
-
-.footer-brand-item (
-  display: flex;
-  width:115px;
-  margin-top:auto;
-)
-
-.footer-brand-link {
-
-}
-
-.icon-html{
+  navigation-link-text {
+    display: flex;
+    padding: 20px 16px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+    font-style: normal;
+    font-weight: 700;
+    color: #000;
+  }
   
-}
+
