--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-/*  Шрифты  */
-
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
@@ -16,73 +14,17 @@
   font-display: swap;
 }
 
-/* Теги */
-
 body {
-  background-color: rgba(94, 6, 6, 0.253);
-  font-family: "PT Sans", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 18px;
-  line-height: 21px;
-  color: #000;  
-  margin: 0
+    font-family: "PT Sans", sans-serif;
+    font-size: 22px;
+    line-height: 26px;
+    color: #333333;
+    background-color: #F2F2F2
 }
-
-background-color: #000000;
-background-image: url("../images/background-body.jpg");
-background-repeat: no-repeat;
-background-position: center top;
-
-
-
-
-h1 {
-  color: #000;
-  text-align: center;
-  font-family: PT Sans, sans-serif;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 36px; /* 120% */
-  text-transform: uppercase;
-  position: absolute;
-}
-
-h2 {
-  color: #333;
-  text-align: center;
-  font-family: PT Sans, sans-serif;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 26px;
-}
-
-h3 {
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 28px;
-}
-
-h4 {
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 24px;
-}
-
-p {
-  color: #333;
-  text-align: center;
-  font-family: PT Sans, sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 21px;
-}
-
+ 
 .visually-hidden {
   position: absolute;
+  clip: rect(0 0 0 0);
   width: 1px;
   height: 1px;
   margin: -1px;
@@ -90,17 +32,262 @@ p {
   padding: 0;
   white-space: nowrap;
   clip-path: inset(100%);
-  clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+/* Заголовки */
+
+h1 {
+  color: #000;
+
+  /* Headings/Heading 1 */
+  font-family: "PT Sans", sans-serif;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 78px;
+
+  margin: 0 auto;
+  max-width: 685px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+h2 {
+  color: #000;
+
+  /* Headings/Heading 2 */
+  font-family: "PT Sans", sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+
+  margin: 0 auto;
+  max-width: 685px;
+  font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+h3 {
+  color: #000;
+
+  /* Headings/Heading 3 */
+  font-family: "PT Sans", sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
+  text-transform: uppercase;
+}
+
+h4 {
+  color: #000;
+
+  /* Headings/Heading 3 none case */
+  font-family: "PT Sans", sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
+}
+
+p {
+  width: 50%;
+  margin: auto;
+  flex-shrink: 0;
+
+  color: #000;
+
+  /* Texts/Text basic */
+  font-family: "PT Sans", sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 118.182% */
+}
+
+.text-input {
+  color: #000;
+
+  /* Text/input */
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.text-small {
+  color: #000;
+
+  /* Texts/Text small */
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+.text-blocks {
+  color: #000;
+
+  /* Texts/Text blocks */
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+
+
+
+/* header */
+
+.page-header {
+  width: 1200px;
+  margin: 0 auto;
+  background: #fff;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+
+
+
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  
+  /* margin-bottom: 12px;
+  padding: 0 70px; */
+
+  /* align-items: flex-start; */
+  /* justify-content: space-between; */
+  /* flex-shrink: 0;
+
+  background-color: #ffffff;
+
+   */
+
+
+  /* flex-direction: column;
+  box-shadow: 0 0 15px 0;
+
+  box-sizing: border-box; */
+}
+
+.navigation {
+  display: flex;
+  padding: 0 70px;
+}
+
+.main-header-logo {
+  width: 140px;
+  height: 70px;
+  margin-right: 30px;
+  z-index: 1;
+}
+
+.navigation-logo {
+  width: 140px;
+  height: 70px;
+  margin-right: 30px;
+  padding: 0 70px;
+}
+
+
+.navigation-button {
+  text-transform: uppercase;
+
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+  background: #756157;
+
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  
+  display: inline-flex;
+  padding: 8px 50px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  color: rgba(255, 255, 255, 1);
+
+  margin-left: 30px;
+}
+
+.navigation-button:default {
+  border-radius: 4px;
+  background: #756157;
+  color: rgba(255, 255, 255, 1);
+}
+
+.navigation-button:hover {
+  border-radius: 4px;
+  background: #615048;
+  color: rgba(255, 255, 255, 1);
+}
+
+.navigation-button:focus {
+  border-radius: 4px;
+  background: #615048;
+  color: rgba(255, 255, 255, 1);
+}
+
+.navigation-button:active {
+  border-radius: 4px;
+  background: #756157;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+
+
+.navigation-list {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 460px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  align-items: center;
+  align-content: start;
+}
+.navigation-item  {
+  position: relative;
+}
+
+.navigation-link {
+  display: block;
+  padding: 20px 16px;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #000000;
+  text-decoration: none;
+}
+
+.navigation-link:hover,
+.navigation-link:focus {
+  color: #756157;
+}
+.navigation-link:active {
+  color: rgba(117, 97, 87, 0.3);
 }
 
 /* Кнопки */
 
-.btn {
+.buttons-basic {
   display: inline-block;
   border: none;
   height: 50px;
   background-color: #eeeeee;
+  
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   padding: 8px 50px;
@@ -109,12 +296,61 @@ p {
   text-decoration: none;
   border: none;
   border-radius: 4px;
-  display: inline-block; */
+  display: inline-block;
 }
 
-.navigation-button {
-  background: #756157;
+/* Кнопки - шрифты */
+
+big-button {
+  color: #000;
+
+/* Buttons/Button big */
+  font-family: PT Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px; /* 180% */
+  text-transform: uppercase;
 }
+
+small-button {
+  color: #000;
+
+  /* Buttons/Button small */
+  font-family: PT Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px; /* 125% */
+  text-transform: uppercase;
+}
+
+like-normal-button {
+  color: #000;
+
+  /* Buttons/Button like normal */
+  font-family: PT Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 125% */
+  text-transform: uppercase;
+}
+
+.like-nonecase-button {
+  color: #000;
+
+  /* Buttons/Button like nonecase */
+  font-family: PT Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 125% */
+}
+
+
+
+
 
 .interest-button {
   background: #82B3D3;
@@ -124,19 +360,83 @@ p {
   background-color: transparent;
 }
 
+
+
+
+/* main */
+
+.main {
+  min-height: 100%;
+	display: flex;
+	flex-direction: column;
+	width: 1200px;
+	margin: 0 auto;
+	box-shadow: 0 0 15px 0 #cccccc;
+	background: #FFF;
+}
+
+/* 1 main-hero */
+
+
+/* 2 main-advantages */
+
+
+/* 3 main-services */
+
+
+/* 4 main-interest */
+
+
+/* 5 main-mailing */
+
+
+
+
+/* footer */
+
+
+
+
+
+
+
+
+
+
 /* Иконки для навигации */
 
-icon-search::before{
-  content: url("../images/icons/search.svg");
-  width: 19px;
-  height: 19px;
+/* Иконка - поиск */
+
+.icon-search {
+  position: relative;
+  width: 20px;
+  height: 20px;
 }
 
-icon-heart::before{
-  content: url("../images/icons/heart.svg");
-  width: 18px;
-  height: 17px;
+.icon-search:before, 
+.icon-search:after {
+content: "";
+position: absolute; 
+left: 90px; 
+top: 0;
+width: 20px; 
+height: 20pxrgb(3, 0, 0)
+background: rgb(0, 0, 0);
+border-radius: 50px 50px 0 0;
+transform: rotate(-45deg); 
+transform-origin: 0 100%;
 }
+
+.icon-search:after {
+left: 0;
+transform: rotate(45deg); 
+transform-origin: 100% 100%;
+}
+
+
+
+
+
 
 /* Декоративный логотип в шапке главной странице */
 
@@ -148,9 +448,43 @@ icon-heart::before{
   background-color: #82B3D3;
   color: black;
   background-position: center bottom;
+
+  box-sizing: border-box;
 }
 
-/*  Иконки */
+.hero-logo:: {
+  position: relative;
+}
+
+
+
+
+
+.main-footer {
+
+  /* justify-content: center; */
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-width: 1200px;
+  min-height: 120px;
+  padding: 40px 70px 30px 70px;
+  background-color: #b0adc2;
+  margin-bottom: 100px;
+}
+
+.text-phone {
+  color: #000;
+
+  /* Texts/Text phone */
+  font-family: "PT Sans", sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px;
+  text-transform: uppercase;
+}
 
 .icon-vk::before {
   content: url("../images/icons/vk-focus.svg");
@@ -180,33 +514,28 @@ icon-heart::before{
   object-fit: contain;
 }
 
+
+
+
+
 .advantages, .services{
   text-align: center;
 }
 
 .mailing {
-  color: #fff;
+  padding: 96px 258px 104px;
+  text-align: center;
 }
 
-.mailing-item {
+.mailing-subscribe {
+  color: ffffff;
+  background-color: #8daab8;
   background-image: url(../images/content-fon/subscribe.jpg);
-  background-color: #82B3D3;
-  background-size: cover, contain;
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: center bottom;
-  color: white;
-  margin: 0 auto;
-  max-width: 100%;
 }
 
-.footer-page {
-  display: flex;
-  width: 1200px;
-  height: 120px;
-  padding: 40px 70px 30px 70px;
-  justify-content: center;
-  align-items: center;
-}
+
 
 search-subtitle{
   color: #FFF;
@@ -217,7 +546,7 @@ search-subtitle{
   line-height: 78px;
   width: 494.399px;
   }
-  
+
   navigation-link-text {
     display: flex;
     padding: 20px 16px;
@@ -230,5 +559,39 @@ search-subtitle{
     font-weight: 700;
     color: #000;
   }
-  
 
+  .copyright {
+    color: black;
+  }
+
+  .feature-train {
+    padding-top: 60px;
+    background-image: url("img/whistle.svg");
+  }
+
+  .catalog-tale {
+    width: 16px;
+    height: 14px;
+    background-image: url(../images/icons/tile.svg);
+    background-repeat: no-repeat;
+    background-color: #82B3D3;
+    background-position: center bottom;
+  }
+
+  .catalog-slide {
+    width: 16px;
+    height: 14px;
+    background-image: url(../images/icons/tile.svg);
+    background-repeat: no-repeat;
+    background-color: #82B3D3;
+    background-position: center bottom;
+  }
+
+  .catalog-bulleted-list {
+    width: 16px;
+    height: 14px;
+    background-image: url(../images/icons/bulleted-list.svg);
+    background-repeat: no-repeat;
+    background-color: #82B3D3;
+    background-position: center bottom;
+  }
