--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,7 @@ body {
 
 h1 {
   color: #000;
+  justify-content: center;
 
   /* Headings/Heading 1 */
   font-family: "PT Sans", sans-serif;
@@ -55,6 +56,7 @@ h1 {
 
 h2 {
   color: #000;
+  justify-content: center;
 
   /* Headings/Heading 2 */
   font-family: "PT Sans", sans-serif;
@@ -73,6 +75,7 @@ h2 {
 
 h3 {
   color: #000;
+  justify-content: center;
 
   /* Headings/Heading 3 */
   font-family: "PT Sans", sans-serif;
@@ -85,6 +88,7 @@ h3 {
 
 h4 {
   color: #000;
+  justify-content: center;
 
   /* Headings/Heading 3 none case */
   font-family: "PT Sans", sans-serif;
@@ -95,6 +99,8 @@ h4 {
 }
 
 p {
+  justify-content: center;
+
   width: 50%;
   margin: auto;
   flex-shrink: 0;
@@ -110,6 +116,8 @@ p {
 }
 
 .text-input {
+  justify-content: center;
+
   color: #000;
 
   /* Text/input */
@@ -121,6 +129,9 @@ p {
 }
 
 .text-small {
+  justify-content: center;
+
+
   color: #000;
 
   /* Texts/Text small */
@@ -132,6 +143,9 @@ p {
 }
 
 .text-blocks {
+  justify-content: center;
+
+
   color: #000;
 
   /* Texts/Text blocks */
@@ -143,42 +157,47 @@ p {
 }
 
 
-
 /* header */
 
-.page-header {
+.main-header {
   width: 1200px;
   margin: 0 auto;
   background: #fff;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
 
+.navigation-text {
+  color: #000;
 
+  /* Headings/Heading 4 */
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  text-transform: capitalize;
+}
 
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
+.navigation-list:hover {
+  color: #756157;
+}
 
-  /* margin-bottom: 12px;
-  padding: 0 70px; */
+.navigation-item:focus {
+  color: #756157;
+}
 
-  /* align-items: flex-start; */
-  /* justify-content: space-between; */
-  /* flex-shrink: 0;
-
-  background-color: #ffffff;
-
-   */
-
-
-  /* flex-direction: column;
-  box-shadow: 0 0 15px 0;
-
-  box-sizing: border-box; */
+.navigation-link:active {
+  color: rgba(117, 97, 87, 0.3);
 }
 
 .navigation {
   display: flex;
-  padding: 0 70px;
+  width: 1200px;
+  height: 64px;
+  padding: 0px 70px;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-shrink: 0;
 }
 
 .main-header-logo {
@@ -188,37 +207,24 @@ p {
   z-index: 1;
 }
 
-.navigation-logo {
-  width: 140px;
-  height: 70px;
-  margin-right: 30px;
-  padding: 0 70px;
-}
-
-
 .navigation-button {
   text-transform: uppercase;
-
-  width: 100%;
-  height: auto;
-  border-radius: 4px;
-  background: #756157;
+  color: rgba(255, 255, 255, 1);
 
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 700;
   line-height: 20px;
 
-  display: inline-flex;
+  border-radius: 4px;
+  background: #756157;
+
+  display: flex;
   padding: 8px 50px;
   justify-content: center;
   align-items: center;
   gap: 10px;
-
-  color: rgba(255, 255, 255, 1);
-
-  margin-left: 30px;
 }
 
 .navigation-button:default {
@@ -245,39 +251,6 @@ p {
   color: rgba(255, 255, 255, 0.3);
 }
 
-
-
-.navigation-list {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 460px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  align-items: center;
-  align-content: start;
-}
-.navigation-item  {
-  position: relative;
-}
-
-.navigation-link {
-  display: block;
-  padding: 20px 16px;
-  font-size: 20px;
-  line-height: 24px;
-  font-weight: 700;
-  color: #000000;
-  text-decoration: none;
-}
-
-.navigation-link:hover,
-.navigation-link:focus {
-  color: #756157;
-}
-.navigation-link:active {
-  color: rgba(117, 97, 87, 0.3);
-}
 
 /* Кнопки */
 
