--- a/styles/style.css
+++ b/styles/style.css
@@ -14,12 +14,17 @@
   font-display: swap;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
     font-family: "PT Sans", sans-serif;
     font-size: 22px;
     line-height: 26px;
     color: #333333;
-    background-color: #F2F2F2
+    background-color: #F2F2F2;
+    margin: 0 auto;
 }
 
 .visually-hidden {
@@ -34,6 +39,118 @@ body {
   clip-path: inset(100%);
   overflow: hidden;
 }
+
+/* header */
+
+.main-header {
+  width: 1200px;
+  height: auto;
+  margin: 0 auto;
+  background: #fff;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.navigation-text {
+  color: #000;
+
+  /* Headings/Heading 4 */
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  text-transform: capitalize;
+}
+
+.navigation {
+  padding-right: 70px;
+  padding-left: 70px;
+  display: flex;
+
+  flex-shrink: 0;
+}
+
+.navigation-list {
+  padding-right: 70px;
+  padding-left: 70px;
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
+  flex-shrink: 0;
+}
+
+.main-header-logo {
+  width: 140px;
+  height: 70px;
+  margin-right: 30px;
+  z-index: 1;
+}
+
+
+
+
+
+.navigation-list:hover {
+  color: #756157;
+}
+
+.navigation-item:focus {
+  color: #756157;
+}
+
+.navigation-link:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+
+
+.navigation-button {
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 1);
+
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+
+  border-radius: 4px;
+  background: #756157;
+
+  display: flex;
+  padding: 8px 50px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.navigation-button:default {
+  border-radius: 4px;
+  background: #756157;
+  color: rgba(255, 255, 255, 1);
+}
+
+.navigation-button:hover {
+  border-radius: 4px;
+  background: #615048;
+  color: rgba(255, 255, 255, 1);
+}
+
+.navigation-button:focus {
+  border-radius: 4px;
+  background: #615048;
+  color: rgba(255, 255, 255, 1);
+}
+
+.navigation-button:active {
+  border-radius: 4px;
+  background: #756157;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+
+
+
 
 /* Заголовки */
 
@@ -157,99 +274,6 @@ p {
 }
 
 
-/* header */
-
-.main-header {
-  width: 1200px;
-  margin: 0 auto;
-  background: #fff;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-}
-
-.navigation-text {
-  color: #000;
-
-  /* Headings/Heading 4 */
-  font-family: "PT Sans", sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 24px;
-  text-transform: capitalize;
-}
-
-.navigation-list:hover {
-  color: #756157;
-}
-
-.navigation-item:focus {
-  color: #756157;
-}
-
-.navigation-link:active {
-  color: rgba(117, 97, 87, 0.3);
-}
-
-.navigation {
-  display: flex;
-  width: 1200px;
-  height: 64px;
-  padding: 0px 70px;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-shrink: 0;
-}
-
-.main-header-logo {
-  width: 140px;
-  height: 70px;
-  margin-right: 30px;
-  z-index: 1;
-}
-
-.navigation-button {
-  text-transform: uppercase;
-  color: rgba(255, 255, 255, 1);
-
-  font-family: "PT Sans", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 20px;
-
-  border-radius: 4px;
-  background: #756157;
-
-  display: flex;
-  padding: 8px 50px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-
-.navigation-button:default {
-  border-radius: 4px;
-  background: #756157;
-  color: rgba(255, 255, 255, 1);
-}
-
-.navigation-button:hover {
-  border-radius: 4px;
-  background: #615048;
-  color: rgba(255, 255, 255, 1);
-}
-
-.navigation-button:focus {
-  border-radius: 4px;
-  background: #615048;
-  color: rgba(255, 255, 255, 1);
-}
-
-.navigation-button:active {
-  border-radius: 4px;
-  background: #756157;
-  color: rgba(255, 255, 255, 0.3);
-}
 
 
 /* Кнопки */
