--- a/styles/style.css
+++ b/styles/style.css
@@ -20,11 +20,13 @@ html, body {
 
 body {
     font-family: "PT Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     font-size: 22px;
     line-height: 26px;
     color: #333333;
     background-color: #F2F2F2;
-    margin: 0 auto;
+    margin: 0;
 }
 
 .visually-hidden {
@@ -40,554 +42,34 @@ body {
   overflow: hidden;
 }
 
-/* header */
-
-.main-header {
-  width: 1200px;
-  height: auto;
-  margin: 0 auto;
-  background: #fff;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-}
-
-.navigation-text {
-  color: #000;
-
-  /* Headings/Heading 4 */
-  font-family: "PT Sans", sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 24px;
-  text-transform: capitalize;
-}
-
-.navigation {
-  padding-right: 70px;
-  padding-left: 70px;
-  display: flex;
-
-  flex-shrink: 0;
-}
-
-.navigation-list {
-  padding-right: 70px;
-  padding-left: 70px;
-  display: flex;
-  justify-content: start;
-  align-items: flex-start;
-  flex-shrink: 0;
-}
-
-.main-header-logo {
-  width: 140px;
-  height: 70px;
-  margin-right: 30px;
-  z-index: 1;
-}
-
-
-
-
-
-.navigation-list:hover {
-  color: #756157;
-}
-
-.navigation-item:focus {
-  color: #756157;
-}
-
-.navigation-link:active {
-  color: rgba(117, 97, 87, 0.3);
-}
-
-
-
-.navigation-button {
-  text-transform: uppercase;
-  color: rgba(255, 255, 255, 1);
-
-  font-family: "PT Sans", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 20px;
-
-  border-radius: 4px;
-  background: #756157;
-
-  display: flex;
-  padding: 8px 50px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-
-.navigation-button:default {
-  border-radius: 4px;
-  background: #756157;
-  color: rgba(255, 255, 255, 1);
-}
-
-.navigation-button:hover {
-  border-radius: 4px;
-  background: #615048;
-  color: rgba(255, 255, 255, 1);
-}
-
-.navigation-button:focus {
-  border-radius: 4px;
-  background: #615048;
-  color: rgba(255, 255, 255, 1);
-}
-
-.navigation-button:active {
-  border-radius: 4px;
-  background: #756157;
-  color: rgba(255, 255, 255, 0.3);
-}
-
-
-
-
-
-/* Заголовки */
-
-h1 {
-  color: #000;
-  justify-content: center;
-
-  /* Headings/Heading 1 */
-  font-family: "PT Sans", sans-serif;
-  font-size: 60px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 78px;
-
-  margin: 0 auto;
-  max-width: 685px;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-h2 {
-  color: #000;
-  justify-content: center;
-
-  /* Headings/Heading 2 */
-  font-family: "PT Sans", sans-serif;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 36px;
-  text-transform: uppercase;
-
-  margin: 0 auto;
-  max-width: 685px;
-  font-weight: 400;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-h3 {
-  color: #000;
-  justify-content: center;
-
-  /* Headings/Heading 3 */
-  font-family: "PT Sans", sans-serif;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 28px;
-  text-transform: uppercase;
-}
-
-h4 {
-  color: #000;
-  justify-content: center;
-
-  /* Headings/Heading 3 none case */
-  font-family: "PT Sans", sans-serif;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 28px;
-}
-
-p {
-  justify-content: center;
-
-  width: 50%;
-  margin: auto;
-  flex-shrink: 0;
-
-  color: #000;
-
-  /* Texts/Text basic */
-  font-family: "PT Sans", sans-serif;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 26px; /* 118.182% */
-}
-
-.text-input {
-  justify-content: center;
-
-  color: #000;
-
-  /* Text/input */
-  font-family: "PT Sans", sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-}
-
-.text-small {
-  justify-content: center;
-
-
-  color: #000;
-
-  /* Texts/Text small */
-  font-family: "PT Sans", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 21px;
-}
-
-.text-blocks {
-  justify-content: center;
-
-
-  color: #000;
-
-  /* Texts/Text blocks */
-  font-family: "PT Sans", sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 21px;
-}
-
-
-
-
-/* Кнопки */
-
-.buttons-basic {
-  display: inline-block;
-  border: none;
-  height: 50px;
-  background-color: #eeeeee;
-
-  font-family: "PT Sans", sans-serif;
-  font-weight: 700;
-  padding: 8px 50px;
-  text-align: center;
-  text-transform: uppercase;
-  text-decoration: none;
-  border: none;
-  border-radius: 4px;
-  display: inline-block;
-}
-
-/* Кнопки - шрифты */
-
-big-button {
-  color: #000;
-
-/* Buttons/Button big */
-  font-family: PT Sans;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 36px; /* 180% */
-  text-transform: uppercase;
-}
-
-small-button {
-  color: #000;
-
-  /* Buttons/Button small */
-  font-family: PT Sans;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 20px; /* 125% */
-  text-transform: uppercase;
-}
-
-like-normal-button {
-  color: #000;
-
-  /* Buttons/Button like normal */
-  font-family: PT Sans;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px; /* 125% */
-  text-transform: uppercase;
-}
-
-.like-nonecase-button {
-  color: #000;
-
-  /* Buttons/Button like nonecase */
-  font-family: PT Sans;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px; /* 125% */
-}
-
-
-
-
-
-.interest-button {
-  background: #82B3D3;
-}
-
-.mailing-form-button {
-  background-color: transparent;
-}
-
-
-
-
-/* main */
-
-.main {
-  min-height: 100%;
-	display: flex;
-	flex-direction: column;
-	width: 1200px;
-	margin: 0 auto;
-	box-shadow: 0 0 15px 0 #cccccc;
-	background: #FFF;
-}
-
-/* 1 main-hero */
-
-
-/* 2 main-advantages */
-
-
-/* 3 main-services */
-
-
-/* 4 main-interest */
-
-
-/* 5 main-mailing */
-
-
-
-
-/* footer */
-
-
-
-
-
-
-
-
-
-
-/* Иконки для навигации */
-
-/* Иконка - поиск */
-
-.icon-search {
-  position: relative;
-  width: 20px;
-  height: 20px;
-}
-
-.icon-search:before,
-.icon-search:after {
-content: "";
-position: absolute;
-left: 90px;
-top: 0;
-width: 20px;
-height: 20pxrgb(3, 0, 0)
-background: rgb(0, 0, 0);
-border-radius: 50px 50px 0 0;
-transform: rotate(-45deg);
-transform-origin: 0 100%;
-}
-
-.icon-search:after {
-left: 0;
-transform: rotate(45deg);
-transform-origin: 100% 100%;
-}
-
-
-
-
-
-
-/* Декоративный логотип в шапке главной странице */
-
-.hero-logo {
-  height: 485px;
-  background-image: url(../images/zig-zag.png), url(../images/content-fon/mountans.jpg);
-  background-repeat: no-repeat;
-  background-size: contain, cover;
-  background-color: #82B3D3;
+/* .header, .main, .hero, .advantages, .search, .filter, .catalog, .subscribe, .footer  {
+  display: block;
+} */
+
+header.main-header {
   color: black;
-  background-position: center bottom;
-
-  box-sizing: border-box;
+  background: #F2F2F2;
+  padding: 0px 40px;
 }
 
-.hero-logo:: {
-  position: relative;
-}
-
-
-
-
-
-.main-footer {
-
-  /* justify-content: center; */
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-width: 1200px;
-  min-height: 120px;
-  padding: 40px 70px 30px 70px;
-  background-color: #b0adc2;
-  margin-bottom: 100px;
-}
-
-.text-phone {
-  color: #000;
-
-  /* Texts/Text phone */
-  font-family: "PT Sans", sans-serif;
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 40px;
-  text-transform: uppercase;
-}
-
-.icon-vk::before {
-  content: url("../images/icons/vk-focus.svg");
-  width: 24px;
-  height: 14px;
-  object-fit: contain;
-}
-
-.icon-telegram::before {
-  content: url(../images/icons/telegram-focus.svg);
-  width: 18px;
-  height: 16px;
-  object-fit: contain;
-}
-
-.icon-youtube::before {
-  content: url(../images/icons/youtube-focus.svg);
-  width: 22px;
-  height: 17px;
-  object-fit: contain;
-}
-
-.icon-html::before {
-  content: url("../images/brand=htmlacademy.svg");
-  width: 22px;
-  height: 17px;
-  object-fit: contain;
-}
-
-
-
-
-
-.advantages, .services{
+.navigation-link {
+  font-weight: 700;
   text-align: center;
+  color: black;
+  background-color: #F2F2F2;
+  text-decoration: none;
+  text-transform: none;
 }
 
-.mailing {
-  padding: 96px 258px 104px;
-  text-align: center;
-}
 
-.mailing-subscribe {
-  color: ffffff;
-  background-color: #8daab8;
-  background-image: url(../images/content-fon/subscribe.jpg);
-  background-size: cover;
+
+
+.hero {
+  color: #ffffff;
+  background-color: #3f1414;
+  background-image: url("../images/content-fon/mountans.jpg");
+  background-size: 100% auto;
   background-repeat: no-repeat;
 }
 
 
-
-search-subtitle{
-  color: #FFF;
-  font-family: PT Sans, sans-serif;
-  font-size: 60px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 78px;
-  width: 494.399px;
-  }
-
-  navigation-link-text {
-    display: flex;
-    padding: 20px 16px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    align-self: stretch;
-    font-style: normal;
-    font-weight: 700;
-    color: #000;
-  }
-
-  .copyright {
-    color: black;
-  }
-
-  .feature-train {
-    padding-top: 60px;
-    background-image: url("img/whistle.svg");
-  }
-
-  .catalog-tale {
-    width: 16px;
-    height: 14px;
-    background-image: url(../images/icons/tile.svg);
-    background-repeat: no-repeat;
-    background-color: #82B3D3;
-    background-position: center bottom;
-  }
-
-  .catalog-slide {
-    width: 16px;
-    height: 14px;
-    background-image: url(../images/icons/tile.svg);
-    background-repeat: no-repeat;
-    background-color: #82B3D3;
-    background-position: center bottom;
-  }
-
-  .catalog-bulleted-list {
-    width: 16px;
-    height: 14px;
-    background-image: url(../images/icons/bulleted-list.svg);
-    background-repeat: no-repeat;
-    background-color: #82B3D3;
-    background-position: center bottom;
-  }
