--- a/styles/style.css
+++ b/styles/style.css
@@ -53,16 +53,15 @@ header.main-header {
 }
 
 .navigation-link {
+  color: black;
+  font-size: 20px;
+  line-height: 24px;
   font-weight: 700;
   text-align: center;
-  color: black;
   background-color: #F2F2F2;
   text-decoration: none;
   text-transform: none;
 }
-
-
-
 
 .hero {
   color: #ffffff;
@@ -71,5 +70,12 @@ header.main-header {
   background-size: 100% auto;
   background-repeat: no-repeat;
 }
+
+.hero-logo {
+  width: 458px;
+  height: 352px;
+  position: relative;
+}
+
 
 
